--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "*",
     "connect-flash": "*",
     "markdown":"*",
+    "method-override":"*",
     "pinyin":"*",
     "mongodb":"*",
     "mongoose":"*"
