--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node nodepad.js",
-    "nodepad": "node bodepad.js"
+    "nodepad": "node nodepad.js"
 
   },
   "dependencies": {
